--- a/src/index.pug
+++ b/src/index.pug
@@ -6,3 +6,6 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Toxin-hotel
   body
+    header
+      img.watermark(src="./styles/watermark.svg", alt="Logo watermark")
+    main
