--- a/src/index.pug
+++ b/src/index.pug
@@ -19,7 +19,7 @@ html(lang="en")
       section.colors
         .colors__block.block
           .colors__pattern_dark-shade
-          .colors-type__name
+          .colors__name
             h2.item-title Dark Shade 100%
             p.body-text_bigger #1F2041
         .colors__block.block
@@ -29,26 +29,26 @@ html(lang="en")
             p.body-text_bigger #1F2041
         .colors__block.block
           .colors__pattern_dark-shade50
-          .colors-type__name
+          .colors__name
             h2.item-title Dark Shade 50%
             p.body-text_bigger #1F2041
         .colors__block.block
           .colors__pattern_dark-shade25
-          .colors-type__name
+          .colors__name
             h2.item-title Dark Shade 25%
             p.body-text_bigger #1F2041
         .colors__block.block
           .colors__pattern_dark-shade05
-          .colors-type__name
+          .colors__name
             h2.item-title Dark Shade 5%
             p.body-text_bigger #1F2041
         .colors__block.block
           .colors__pattern_purple
-          .colors-type__name
+          .colors__name
             h2.item-title Purple
             p.body-text_bigger #BC9CFF
         .colors__block.block
           .colors__pattern_green
-          .colors-type__name
+          .colors__name
             h2.item-title Green
             p.body-text_bigger #6FCF97
